Bugfix/etsl-675 fixed promotional tile overlapping issue, bugfix/etsl-460 business blog ui issue

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/share-this-design.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/share-this-design.scss
@@ -431,7 +431,7 @@
         border-right: none;
         color: $gray;
         font-size: $font12pt8;
-        height: auto;
+        height: toRem(39);
         line-height: 1.6;
         padding: toRem(10);
         text-overflow: ellipsis;
